--- a/ui/src/app/voting-item/voting-item.component.html
+++ b/ui/src/app/voting-item/voting-item.component.html
@@ -8,7 +8,7 @@
         <hr />
         <div class="d-flex justify-content-between">
             <button (click)="handleVote(1)" class="btn btn-success">Up</button>
-            <button class="btn btn-danger">Down</button>
+            <button (click)="handleVote(-1)" class="btn btn-danger">Down</button>
         </div>
     </div>
 </div>
